// python3 -m grpc.tools.protoc bittensor/_proto/bittensor.proto  -I. --python_out=. --grpc_python_out=. --proto_path bittensor/_proto/

syntax = "proto3";

import "text_last_hidden_state/messages.proto";
import "text_causal_lm_next/messages.proto";
import "text_seq2seq/messages.proto";

service Bittensor {
	// Forward calls.
	rpc ForwardTextLastHiddenState (ForwardTextLastHiddenStateRequest) returns (ForwardTextLastHiddenStateResponse) {}
	rpc ForwardTextCausalLMNext (ForwardTextCausalLMNextRequest) returns (ForwardTextCausalLMNextResponse) {}
	rpc ForwardTextSeq2Seq (ForwardTextSeq2SeqRequest) returns (ForwardTextSeq2SeqResponse) {}
}

// Return codes from Backward and Forward call.
enum ReturnCode {
	NoReturn = 0; // Default Value
	Success = 1; // Succesfull query.
	Timeout = 2; // Request timeout.
	Backoff = 3; // Call triggered a backoff.
	Unavailable = 4; // Endpoint not available.
	NotImplemented = 5; // Modality not implemented.
	EmptyRequest = 6; // Request is empty.
	EmptyResponse = 7; // Response is empty.
	InvalidResponse = 8; // Request is invalid.
	InvalidRequest = 9; // Response is invalid.
	RequestShapeException = 10; // Request has invalid shape.
	ResponseShapeException = 11; // Response has invalid shape.
	RequestSerializationException = 12; // Request failed to serialize.
	ResponseSerializationException = 13; // Response failed to serialize.
	RequestDeserializationException = 14; // Request failed to deserialize.
	ResponseDeserializationException = 15; // Response failed to deserialize.
	NotServingNucleus = 16; // Receiving Neuron is not serving a Nucleus to query.
	NucleusTimeout = 17; // Processing on the server side timeout.
	NucleusFull = 18; // Returned when the processing queue on the server is full.
	RequestIncompatibleVersion = 19; // The request handler is incompatible with the request version.
	ResponseIncompatibleVersion = 20; // The request handler is incompatible with the request version.
	SenderUnknown = 21; // The requester is not known by the reciever. 
	UnknownException = 22; // Unknown exception.
	Unauthenticated = 23; // Authentication failed.
	BadEndpoint = 24; // Dummy endpoint
}


