// python3 -m grpc.tools.protoc bittensor/_proto/text_causal_lm_next/messages.proto  -I. --python_out=. --grpc_python_out=. --proto_path bittensor/_proto/

syntax = "proto3";

import "tensors/messages.proto";

message ForwardTextCausalLMNextRequest {
	int32 version = 1;
	string hotkey = 2;	

	Serializer input_text_serializer = 3;
	Serializer output_logits_serializer = 4;

	Tensor input_text = 5;

	// Specifies the number of Topk logits to return.
	// Logit values are packed (pos, value) acocording 
	// to the bittensor tokenizer vocab size.
	int32 topk = 6;
}

message ForwardTextCausalLMNextResponse {
	int32 version = 1;
	string hotkey = 2;	
	
	Tensor output_logits = 3;

	// Specifies the number of Topk logits to return.
	// Logit values are packed (pos, value) acocording 
	// to the bittensor tokenizer vocab size.
	int32 topk = 4;
}
